--- a/Keebin/app/build.gradle
+++ b/Keebin/app/build.gradle
@@ -5,6 +5,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
     defaultConfig {
+        multiDexEnabled true
         applicationId "kasper.pagh.keebin"
         minSdkVersion 17
         targetSdkVersion 24
