--- a/Keebin/app/build.gradle
+++ b/Keebin/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/gson-2.2.2.jar')
 }
