--- a/Kotlinclassesandinterfaces/app/build.gradle
+++ b/Kotlinclassesandinterfaces/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.1"
     defaultConfig {
-        multiDexEnabled true
-        applicationId "kasper.pagh.keebin"
-        minSdkVersion 17
+        applicationId "com.example.pelle.kotlinclassesandinterfaces"
+        minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -19,25 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'com.google.android.gms:play-services:9.4.0'
     testCompile 'junit:junit:4.12'
-    compile files('libs/gson-2.2.2.jar')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-}
-repositories {
-    mavenCentral()
 }
